# valg

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  Procfile  README.md  pyproject.toml  requirements.txt  valg.spec
.claude/: settings.json
.github/: pull_request_template.md
.github/workflows/: release.yml  sync.yml
docs/: github-actions-setup.md
docs/plans/: 2026-03-07-election-dashboard-design.md  2026-03-07-election-dashboard-plan.md  2026-03-09-firedrill.md  2026-03-09-standalone-design.md  2026-03-09-standalone-plan.md  2026-03-09-tillaegsmandater-plan.md  2026-03-09-ui-multiselect-design.md  2026-03-10-demo-mode-design.md  2026-03-10-demo-mode-plan.md  addtional-cases.md
scripts/: build_fv2022_scenario.py  download_historical.py  election-night.sh  firedrill.py  setup-branch-protection.sh  start-election-night.sh
tests/: helpers.py  test_ai.py  test_calculator.py  test_cli.py  test_demo.py  test_differ.py  test_election_night.py  test_fake_fetcher.py  test_fetcher.py  test_fv2022_build.py  test_fv2022_scenario.py  test_http_fetcher.py  test_kv2025_scenario.py  test_kv2025_transform.py  test_models.py  test_plugin_registry.py  test_plugins.py  test_processor.py  test_queries.py  test_server.py  test_sessions.py  test_synthetic.py  test_validator.py
tests/e2e/: test_demo_e2e.py  test_use_cases.py
tests/synthetic/: generator.py
valg/: __main__.py  ai.py  calculator.py  cli.py  demo.py  differ.py  fake_fetcher.py  fetcher.py  http_fetcher.py  models.py  processor.py  queries.py  server.py  sessions.py  validator.py
(+7606 files in other folders)
