[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "valg"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "paramiko>=3.4",
    "gitpython>=3.1",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]
ai  = ["openai>=1.0"]

[project.scripts]
valg = "valg.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["valg*"]
